# dbt-semantic-mcp

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  claude-settings.project.json  justfile  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _cosign-sign.yml  _reusable.yml  _sbom.yml  ci-python.yml  ci.yml  release.yml
scripts/: generate_seed.py
src/dbt_semantic_mcp/: __init__.py  server.py  warehouse.py
tests/: conftest.py  test_generator.py  test_mcp_server.py  test_warehouse.py
warehouse/: dbt_project.yml  profiles.yml
warehouse/models/marts/: dim_customers.sql  dim_products.sql  fct_order_items.sql  fct_orders.sql  schema.yml
warehouse/models/semantic/: metrics.yml  semantic_models.yml
warehouse/models/staging/: schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_shipments.sql
warehouse/models/utilities/: metricflow_time_spine.sql  schema.yml
warehouse/seeds/: raw_customers.csv  raw_order_items.csv  raw_orders.csv  raw_products.csv  raw_shipments.csv  schema.yml
warehouse/tests/: assert_cancelled_orders_have_no_shipment.sql  assert_order_revenue_matches_lines.sql
