[project]
name = "dbt-semantic-mcp"
version = "0.1.0"
description = "DuckDB + dbt medallion marts + a governed semantic layer (MetricFlow), exposed to agents over MCP"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "Chris Youngblut" },
]
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-duckdb>=1.10.1",
    "dbt-metricflow[duckdb]>=0.13.0",
    "mcp>=1.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_semantic_mcp"]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Enable: pycodestyle, pyflakes, isort, bugbear, comprehensions, simplify, naming, pyupgrade
select = ["E", "F", "I", "B", "C4", "SIM", "N", "UP", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pyright ---
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = "warning"

# --- pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = []
